--- a/Content/Site.css
+++ b/Content/Site.css
@@ -22,3 +22,19 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.flex-container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+}
+
+.flex-container .column {
+    padding: 10px;
+    background: #dbdfe5;
+    flex: 1;
+}
+
+.flex-container .column.bg-alt {
+    background: #b4bac0;
+}
